[gd_scene load_steps=12 format=3 uid="uid://cto3hhj5ogj6r"]

[ext_resource type="Script" uid="uid://341q67yn6kkq" path="res://scripts/level_1_mod.gd" id="1_iga6i"]
[ext_resource type="Texture2D" uid="uid://cme6x81kk03n3" path="res://assets/Tilemap/monochrome_tilemap.png" id="2_ga2e2"]
[ext_resource type="PackedScene" uid="uid://c7f2i3i4covj3" path="res://scenes/game_over_ui.tscn" id="5_pouil"]
[ext_resource type="FontFile" uid="uid://caymmx2pqsuqc" path="res://assets/fonts/TypeLightSans-KV84p.otf" id="6_2vqjs"]
[ext_resource type="Script" uid="uid://gcj3sdvv6lpd" path="res://scripts/electron_spawner.gd" id="7_ga2e2"]
[ext_resource type="Texture2D" uid="uid://tklq2s4yuebo" path="res://assets/sprites/CoulombForceEq.png" id="7_ooqim"]
[ext_resource type="PackedScene" uid="uid://cdfm1aong28fc" path="res://scenes/proton_mod.tscn" id="8_ga2e2"]
[ext_resource type="PackedScene" uid="uid://dumo24782tvdp" path="res://scenes/electron_mod.tscn" id="8_wmus4"]
[ext_resource type="AudioStream" uid="uid://brmmjgj1aq4uv" path="res://assets/sounds/Sports Golf Ball Hit Tee Off 02.wav" id="9_wmus4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6sh32"]
texture = ExtResource("2_ga2e2")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 3.59718, 5.2159, -8, 8)
8:11/0 = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:11/0 = 0
9:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -4.67633, 5.2159)
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.47491, 8, -6.65477, 8, 6.47491, -8, 6.29506)
8:12/0 = 0
9:12/0 = 0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.93534, -8, 5.93534, -8, 5.93534, 8, -5.93534, 8)
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.03604, -5.57562, 8, -6.47491, 8, 8, -5.75548, 8)
8:13/0 = 0
8:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.47491, 8, -6.65477, 8, 6.47491, -8, 6.29506)
9:13/0 = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 3.59718, -4.49647, 8, 8, -8, 8)
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0

[sub_resource type="TileSet" id="TileSet_iywne"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6sh32")

[node name="Level1" type="Node2D"]
script = ExtResource("1_iga6i")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_iywne")
format = 2
layer_0/name = "Background"

[node name="GameOverUI" parent="." instance=ExtResource("5_pouil")]
visible = false

[node name="TimeLabel" type="Label" parent="."]
offset_left = 28.0
offset_top = 23.0
offset_right = 347.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6_2vqjs")
theme_override_font_sizes/font_size = 40
text = "Time : 0 s"

[node name="TheoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="TheoryUI"]
offset_left = 17.0
offset_top = 9.0
offset_right = 1137.0
offset_bottom = 638.0
color = Color(0, 0.160784, 0.313726, 1)
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="TheoryUI"]
offset_left = 387.0
offset_top = 38.0
offset_right = 767.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("6_2vqjs")
theme_override_font_sizes/font_size = 50
text = "Coulomb's Force"
metadata/_edit_use_anchors_ = true

[node name="Theory" type="Label" parent="TheoryUI"]
offset_left = 62.0
offset_top = 126.0
offset_right = 1086.0
offset_bottom = 531.0
theme_override_fonts/font = ExtResource("6_2vqjs")
theme_override_font_sizes/font_size = 30
text = "Coulomb’s force describes the interaction between two electric charges.
 It is given by the formula :



Where F is the force between the charges
k is Coulomb’s constant 
q1 and q2 are the charges
r is the distance between the charges

Now, use the arrows to avoid getting hit by the electrons !
"
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="TheoryUI"]
offset_left = 398.0
offset_top = 212.0
offset_right = 671.0
offset_bottom = 286.0
texture = ExtResource("7_ooqim")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="TheoryUI"]
offset_left = 475.0
offset_top = 521.0
offset_right = 652.0
offset_bottom = 608.0
theme_override_fonts/font = ExtResource("6_2vqjs")
theme_override_font_sizes/font_size = 40
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="ElectronSpawner" type="Node2D" parent="."]
script = ExtResource("7_ga2e2")
electron_scene = ExtResource("8_wmus4")

[node name="SpawnTimer" type="Timer" parent="ElectronSpawner"]

[node name="Proton" parent="." instance=ExtResource("8_ga2e2")]
position = Vector2(576, 330)

[node name="ElectronContainer" type="Node2D" parent="."]

[node name="CollisionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wmus4")

[connection signal="pressed" from="TheoryUI/PlayButton" to="." method="_on_play_button_pressed"]
